[#3196] Fix z-index for the hierarchy
Reduce the z-index of the hierarchy to get it "below" the header.

--- a/akvo/rsr/static/styles-src/main.scss
+++ b/akvo/rsr/static/styles-src/main.scss
@@ -2206,10 +2206,10 @@ div.textBlock {
 /* Project hierarchy */
 .project-hierarchy {
     div {
-        z-index: 99999;
+        z-index: 9;
     }
     svg {
-        z-index: 99998;
+        z-index: 8;
     }
 }
 
